2020-04-30: Ver. 0.2-13
  * Add a demo example that uses oversize k for semi-supervised clustering.

2019-03-20: Ver. 0.2-12
  * Push some PROTECT and UNPROTECT back within the call.

2019-03-07: Ver. 0.2-11
  * Move PROTECT and UNPROTCT to the caller function.

2018-03-17: Ver. 0.2-11
  * Fix conv.iter and conv.eps for most C functions.

2018-03-11: Ver. 0.2-11
  * Return conv.iter and conv.eps for emcluster(), emgroup(), and their
    semi-supervise version if any.

2018-01-30: Ver. 0.2-10
  * Adjusting for CRAN requests.

2018-01-27: Ver. 0.2-10
  * Reordering LAPACK_LIBS, BLAS_LIBS, and FLIBS in "src/Makevars".

2018-01-14: Ver. 0.2-9
  * Replace recolor.r

2017-06-04: Ver. 0.2-8
  * Fix UNPROTECT problems. DO NOT add UNPROTECT(*) to
    EMCluster/src/it_R_emptr.c. It will be done outside of that call by the
    caller. It is only to allocated space which is pointed by a poninter!

2017-04-07: Ver. 0.2-7
  * Add UNPROTECT(8); to EMCluster/src/it_R_emptr.c.

2017-03-17: Ver. 0.2-7
  * Rename emobj$M to emobj$adjM.

2015-10-31: Ver. 0.2-6
  * Change recolor() and add rematch() and recode().
  * Change url address.

2015-10-19: Ver. 0.2-5
  * Fix an adjR seg. fault.
  * Add recolor().

2015-07-18: Ver. 0.2-5
  * Several changes.
  * Rename partial.logL() to partial.q() and change all other caller functions.
  * Add partial.logL().
  * Add logitPI = TRUE to partial.q() and partial.logL().
  * Normalize pi at the end of EM for functions returning emobj.
  * Add log = FALSE to dmixmvn().
  * Add Jaccard.Index().
  * Change man pages.
  * Change authorship.

2015-07-05: Ver. 0.2-5
  * Add logit post I information.

2015-03-07: Ver. 0.2-5
  * Fix typos and problems of new version of R.
  * Change lmt options.

2013-01-13: Ver. 0.2-5
  * Fix more lmt and ppcontour plotting bugs.

2013-01-03: Ver. 0.2-5
  * Add and test lmt and ppcontour.

2013-12-14: Ver. 0.2-4
  * Move vignettes.

2013-07-02: Ver. 0.2-4
  * Fix variance2LTSigma for 1 dimension case.
